test/param/loop/paramForLoopWrongTypeLow.good
paramForLoopWrongTypeLow.chpl:1: error: Range bounds and count must be integers of compatible types in param for loop
